testing/tests/ui/extends.stderr
error: whitespace control is not allowed on `extends`
 --> <source attribute>:1:3
  |
       1 | {%- extends "whatever.html" %}
         |   ^ close to this token
         |
 --> tests/ui/extends.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: whitespace control is not allowed on `extends`
 --> <source attribute>:1:3
  |
       1 | {% extends "whatever.html" -%}
         |   ^ close to this token
         |
  --> tests/ui/extends.rs:10:10
   |
10 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
